# hengji

./: .gitignore  ARCHITECTURE.md  README.en.md  README.md  package.json  pnpm-lock.yaml
.claude/: launch.json
apps/desktop/: package.json
apps/desktop/scripts/: make-icon.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: asr.rs  crypto.rs  db.rs  export.rs  lib.rs  llm.rs  main.rs  ocr.rs
apps/web/: index.html  package.json  tsconfig.json
apps/web/src/: App.tsx  app.css  biz.ts  calendar.ts  confirm.ts  db.ts  docs.ts  export.ts  format.ts  import-files.ts  import-llm.ts  import-ocr.ts  import-voice.ts  import.ts  settings.ts
apps/web/src/components/: AiCard.tsx  SecurityCard.tsx  TxnRow.tsx  UnlockScreen.tsx
apps/web/src/documents/: registry.ts
apps/web/src/views/: Accounts.tsx  Budgets.tsx  Calendar.tsx  Customers.tsx  Dashboard.tsx  Documents.tsx  FeeDefinitions.tsx  ImportReview.tsx  Inventory.tsx  Invest.tsx  Orders.tsx  OverviewAll.tsx  Products.tsx  Purchases.tsx  QuickEntry.tsx  Reconcile.tsx  Settings.tsx  Suppliers.tsx  Transactions.tsx
apps/web/test/: biz-settle.test.ts  biz-undo.test.ts  calendar.test.ts  export.test.ts  import-llm.test.ts  import-settle.test.ts  import-voice.test.ts
demo/: index.html
design/: poster-philosophy.md  poster-xhs.mjs  poster.mjs  xhs-copy.md
docs/design/: encryption.md  soft-path-plan.md  spike-results.md
