[package]
name = "hengji-desktop"
version = "0.1.0"
description = "Hengji - local-first double-entry accounting"
edition = "2021"

[lib]
name = "hengji_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
