[package]
name = "hengji-desktop"
version = "0.3.0"
description = "Hengji - local-first double-entry accounting"
edition = "2021"

[lib]
name = "hengji_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# 阶段 4a 备份导出：原生「另存为」对话框选路径（实际写文件仍在 Rust 内完成，不引 tauri-plugin-fs）。
tauri-plugin-dialog = "2"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 阶段 2 加密：NCrypt PCP 封装 DEK（Spike #2 已验）。仅 Windows 桌面用。
sha2 = "0.10"
zeroize = "1"

[target.'cfg(windows)'.dependencies]
# Win32_*：阶段 2 加密（NCrypt PCP）。Foundation/Globalization/Graphics_Imaging/Media_Ocr/Storage_Streams：增量2 本地 OCR（Windows.Media.Ocr）。
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
] }
